still trying to fix the footer and stretch the <main> backgroun color...

--- a/static/style.css
+++ b/static/style.css
@@ -142,8 +142,12 @@ form > select {
 footer {
     background-color: rgb(7, 178, 184);
     color: rgb(52, 3, 131);
-    padding: 10px 0;
     text-align: center;
     font-weight: bold;
     font-size: larger;
+    height: 80px;
+    /* width: 100%; */
+    /* position: fixed; */
+    /* left: 0; */
+    /* bottom: 0; */
 }
